update text alignment, fix number of states

--- a/source/_sass/layout/_home.scss
+++ b/source/_sass/layout/_home.scss
@@ -37,7 +37,9 @@
   &-lincoln-highway,
   &-stats {
     --container-margin-block: min( 6rem, 12vh );
+  }
 
+  &-lincoln-highway {
     text-align: center;
   }
 }
